--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,27 +1,19 @@
-name: Window 10
-
-on: [push, workflow_dispatch]
-
+name: Windows RDP
+on: [workflow_dispatch]
 jobs:
-  build:
-
+  rdp-windows:
     runs-on: windows-latest
-    timeout-minutes: 9999
-
-
     steps:
-    - name: Download
-      run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-    - name: Extract
-      run: Expand-Archive ngrok.zip
-    - name: Auth
-      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
-      env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    - name: Enable TS
-      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
-    - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-    - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-    - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "@cyb3rking" -Force)
+    - uses: actions/checkout@v2
+    - name: Download NGROK
+      run: |
+        Invoke-WebRequest https://bin.equinox.io/c/4VmDzA/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+        Expand-Archive ngrok.zip
+    - name: Auth NGROK
+      run: .\ngrok\ngrok.exe authtoken ${{ secrets.NGROK_TOKEN }}
+    - name: Enable RDP
+      run: |
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+        Enable-NetFirewallRule -Name "RemoteDesktop-UserMode-In-TCP"
     - name: Create Tunnel
       run: .\ngrok\ngrok.exe tcp 3389
